--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,6 +10,8 @@
 @import "components/header/header-style"
 @import "components/header/navigation"
 
+@import "components/slide/banner"
+
 a
   color: $dark-grey
 
