--- a/sass/components/slide/banner.sass
+++ b/sass/components/slide/banner.sass
@@ -1,9 +1,14 @@
 .banner-wrapper
   height: 500px
+  background-color: #130c04
   position: relative
 
-.banner-item-wrapper
+.banner
+  // position: relative
   width: 100%
+  height: 100%
+
+.banner-item-wrapper
   height: 500px
   img
     position: absolute
@@ -11,21 +16,57 @@
     height: 100%
     z-index: -1
 
+.banner-link
+  transition: all ease 200ms
+  text-transform: uppercase
+  font-size: 14px
+  color: #fff
+  position: absolute
+  right: 155px
+  bottom: 170px
+  min-width: 121px
+  min-height: 41px
+  border-radius: 5px
+  background: $red
+  display: -webkit-flex
+  display: -ms-flex
+  display: flex
+  align-items: center
+  justify-content: center
+  &:hover
+    transform: scale(1.1)
+
+.banner-dots-wrapper
+  position: absolute
+  z-index: 999
+  top: 50%
+  transform: translateY(-50%)
+
+.banner-dots
+  .active
+    width: 100%
+    > span
+      display: none
+      height: 30px
+      width: 30px
+    .actor
+      display: flex
+      align-items: center
+
 .owl-dot
+  &:first-child
+    margin-top: 0
   display: block
   background-color: transparent
   padding: 0
   width: 30px
-  transition: all ease 200ms
+  margin-top: 10px
   &:hover
     cursor: pointer
-    span
-      transition: all ease 200ms
-      height: 30px
-      width: 30px
-      &::before
-        content: 
-  span
+    > span
+      height: 15px
+      width: 15px
+  > span
     display: inline-block
     height: 10px
     width: 10px
@@ -33,36 +74,124 @@
     border-radius: 50%
     margin: 0 auto
 
-.banner-dots
+.actor
+  display: none
+
+.actor-pic
+  border-radius: 50%
+  border: 2px solid $red
+
+.actor-name
+  margin-left: 10px
+  font-size: 14px
+  font-weight: 700
+  color: #fff
+  font-style: bold
+
+.banner-info-wrapper
+  border-top: 1px solid #26221e
   position: absolute
-  width: 1151px
-  top: 45%
-  left: 50%
-  transform: translate(-50%, -50%)
-  padding-right: 20px
-  padding-left: 20px
+  width: 100%
+  min-height: 53px
+  bottom: 0
+  overflow: hidden
   z-index: 999
 
-@media (max-width: 1155px)
-  .banner-dots
-    width: 1000px
+.banner-info
+  color: #fff
+  min-height: 53px
+  display: -webkit-flex
+  display: -ms-flex
+  display: flex
+  justify-content: space-between
+  align-items: center
+  flex-wrap: wrap
 
-@media (max-width: 1000px)
-  .banner-dots
-    width: 850px
+.published-container, .updated-container, .rating-container
+  text-transform: uppercase
+  color: #fff
+  font-weight: 700
 
-@media (max-width: 850px)
-  .banner-dots
-    width: 700px
+.updated-container, .rating-container
+  margin-left: 28px
 
-@media (max-width: 700px)
-  .banner-dots
-    width: 550px
+.published-date, .updated-date
+  font-weight: 400
+  color: $red
 
-@media (max-width: 550px)
-  .banner-dots
-    width: 400px
+.rating-container
+  margin-right: auto
 
-@media (max-width: 400px)
-  .banner-dots
-    width: 300px
+.stars
+  display: inline-block
+  margin-left: 11px
+
+.comments-container, .downloads-container
+  margin-left: 53px
+
+.likes-container, .comments-container, .downloads-container
+  position: relative
+
+.likes-amount, .comments-amount, .downloads-amount
+  &::before
+    position: absolute
+    left: -25px
+    top: 0
+
+.likes-amount
+  &::before
+    content: url("icons/like.svg")
+    top: 1px
+
+.comments-amount
+  &::before
+    content: url("icons/comments.svg")
+    top: 3px
+
+.downloads-amount
+  &::before
+    content: url("icons/downloads.svg")
+    top: 2px
+
+.banner-sk
+  height: 100%
+  width: 100%
+  background-image: url("content-pictures/banner.png")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: 50% 100%
+  &::before
+    content: ""
+    position: absolute
+    z-index: -1
+    width: 200%
+    height: 200%
+    background: inherit
+    box-shadow: inset 0 0 0 200px rgba(7, 7, 7, 0.5)
+    filter: blur(15px)
+    opacity: 0.7
+    top: 0
+
+// @media (max-width: 1155px)
+//   .banner-dots-wrapper
+//     width: 1000px
+//
+// @media (max-width: 1000px)
+//   .banner-dots-wrapper
+//     width: 850px
+//
+// @media (max-width: 850px)
+//   .banner-dots-wrapper
+//     width: 700px
+//
+// @media (max-width: 700px)
+//   .banner-dots-wrapper
+//     width: 550px
+//
+// @media (max-width: 550px)
+//   .banner-dots-wrapper
+//     width: 400px
+//
+// @media (max-width: 400px)
+//   .banner-dots-wrapper
+//     width: 300px
