--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,6 +11,7 @@
 @import "components/header/navigation"
 
 @import "components/slide/banner"
+@import "components/slide/banner-info"
 
 a
   color: $dark-grey
