--- a/sass/components/slide/banner.sass
+++ b/sass/components/slide/banner.sass
@@ -1,18 +1,11 @@
 .banner-wrapper
-  height: 500px
   background-color: #130c04
   position: relative
 
-.banner
-  width: 100%
-  height: 100%
-
-.banner-item-wrapper
-  height: 500px
+.banner-item-picture
   img
-    position: absolute
     width: 100%
-    height: auto
+    max-height: 500px
     z-index: -1
 
 .banner-link
@@ -38,7 +31,7 @@
 .banner-dots-wrapper
   position: absolute
   z-index: 999
-  top: 50%
+  top: 45%
   transform: translateY(-50%)
 
 .banner-dots
