--- a/sass/components/slide/banner-info.sass
+++ b/sass/components/slide/banner-info.sass
@@ -86,12 +86,21 @@
     top: 0
 
 @media (max-width: 910px)
+  .banner-info-wrapper
+    position: static
+    padding: 7px
+
+  .banner-sk
+    display: none
+
   .banner-info-date, .banner-info-likes
     flex-direction: column
 
-  .banner-info
+  .banner-info-date, .banner-info-likes
     div
       margin-top: 7px
+      &:first-child
+        margin-top: 0
 
   .updated-container, .rating-container, .comments-container, .downloads-container
     margin-left: 0
@@ -105,6 +114,9 @@
   .likes-container, .comments-container, .downloads-container
     align-self: flex-end
 
-@media (max-width: 550px)
   .banner-info
     font-size: 12px
+
+@media (max-width: 700px)
+  .banner-dots-wrapper
+    display: none
