--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,6 +3,8 @@
 
 @import "other/fonts"
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:700')
+@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed')
+
 
 @import "other/minimum-reset.sass"
 @import "other/variables"
@@ -12,6 +14,9 @@
 
 @import "components/slide/banner"
 @import "components/slide/banner-info"
+
+@import "components/movies/search"
+@import "components/movies/films-grid"
 
 a
   color: $dark-grey
