--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,9 @@
 @import "components/movies/search"
 @import "components/movies/films-grid"
 
+@import "components/download/download-panel"
+
+
 a
   color: $dark-grey
 
