--- a/sass/components/movies/films-grid.sass
+++ b/sass/components/movies/films-grid.sass
@@ -3,5 +3,56 @@
 
 .movies-grid-item
   margin-bottom: 14px
-  img
-    border-radius: 5px
+  box-sizing: content-box
+  cursor: pointer
+  border-radius: 10px
+  > img
+    transition: all ease 200ms
+    border-radius: 10px
+    box-sizing: content-box
+  &:hover
+    > img
+      -webkit-box-shadow: 0px 2px 5px 0px #9E9E9E
+      box-shadow: 0px 2px 5px 0px #9E9E9E
+      border: 4px solid $red
+    > .movies-download
+      &::after
+        width: 40px
+        height: 40px
+
+.movies-like-count
+  font-size: 14px
+  color: #fff
+  position: absolute
+  top: 12px
+  left: 42px
+  &::before
+    content: url("icons/like.svg")
+    position: absolute
+    left: -25px
+    top: 2px
+
+.movies-download
+  position: absolute
+  top: 10px
+  right: 12px
+  z-index: 10
+  &::after
+    transition: all ease 200ms
+    z-index: -1
+    position: absolute
+    top: -10px
+    right: -12px
+    content: ""
+    width: 0
+    height: 0
+    background-color: $red
+    border-radius: 0 5px 0 5px
+
+.movie-caption
+  color: #fff
+  font-size: 14px
+  position: absolute
+  bottom: 16px
+  width: 100%
+  text-align: center
