--- a/sass/components/slide/banner-info.sass
+++ b/sass/components/slide/banner-info.sass
@@ -81,7 +81,7 @@
     height: 200%
     background: inherit
     box-shadow: inset 0 0 0 200px rgba(7, 7, 7, 0.5)
-    filter: blur(15px)
+    filter: url(#blur)
     opacity: 0.7
     top: 0
 
